--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,10 @@
         "infection/infection": "^0.21",
         "infection/phpspec-adapter": "^0.1.2",
         "phpspec/phpspec": "^7.0",
-        "symfony/http-foundation": "^5.2"
+        "phpunit/phpunit": "^9.5",
+        "symfony/framework-bundle": "^5.2",
+        "symfony/http-foundation": "^5.2",
+        "symfony/test-pack": "^1.0"
     },
     "autoload": {
         "psr-4": {
