--- a/grumphp.yml.dist
+++ b/grumphp.yml.dist
@@ -7,6 +7,7 @@ parameters:
     extra_tasks:
         phpspec:
             verbose: true
+        phpunit: ~
         infection:
             threads: 1
             test_framework: phpspec
