--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,7 +48,7 @@ jobs:
               run: composer install --no-progress --prefer-dist --optimize-autoloader
 
             - name: Run Grumphp
-              run: vendor/bin/grumphp run --tasks=phpspec
+              run: vendor/bin/grumphp run --tasks=phpspec,phpunit
 
             - name: Send Scrutinizer data
               run: |
