tests: Add Behat tests.

--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,18 @@
         "symfony/framework-bundle": "^5.2"
     },
     "require-dev": {
+        "behat/behat": "^3.8",
         "drupol/php-conventions": "^4.0.2",
+        "friends-of-behat/mink": "^1.9",
+        "friends-of-behat/mink-browserkit-driver": "^1.5",
+        "friends-of-behat/mink-extension": "^2.5",
+        "friends-of-behat/symfony-extension": "^2.2",
         "friends-of-phpspec/phpspec-code-coverage": "^6.1",
         "infection/infection": "^0.21",
         "infection/phpspec-adapter": "^0.1.2",
         "phpspec/phpspec": "^7.0",
         "phpunit/phpunit": "^9.5",
+        "soyuka/contexts": "^3.3",
         "symfony/framework-bundle": "^5.2",
         "symfony/http-foundation": "^5.2",
         "symfony/test-pack": "^1.0"
